--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
     <!-- font awesome icons -->
     <link rel="stylesheet" href="{% static 'site/css/fontello.css' %}">
     {% block custom_css %}{% endblock %}
+    {% block local_css %}{% endblock %}
 </head>
 <body translate="no">
     {% block content %}
