--- a/crypto_project/customer/templates/_bills.html
+++ b/crypto_project/customer/templates/_bills.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card card-full-h ">
     <div class="row mb-3">
         <div class="col">
             <h2>Мои Счета</h2>
