--- a/crypto_project/main/templates/homepage.html
+++ b/crypto_project/main/templates/homepage.html
@@ -303,11 +303,17 @@
             </div>
             <div class="mb-3">
                 <label for="password1" class="form-label">Пароль</label>
-                <input type="password" name="password1" class="form-control" id="password1" placeholder="Введите свой пароль">
+                <div class="password-wrapp">
+                    <input type="password" name="password1" class="form-control" id="password1" placeholder="Введите свой пароль">
+                    <i class="icon icon-eye-slash passwordToggle"></i>
+                </div>
             </div>
             <div class="mb-3">
                 <label for="password2" class="form-label">Подтвердите пароль</label>
-                <input type="password" name="password2" class="form-control" id="password2" placeholder="Введите подтверждение пароля">
+                <div class="password-wrapp">
+                    <input type="password" name="password2" class="form-control" id="password2" placeholder="Введите подтверждение пароля">
+                    <i class="icon icon-eye-slash passwordToggle"></i>
+                </div>
             </div>
             <div class="d-grid">
                 <button type="submit" class="btn btn-success" id="registrationSend">Регистрация</button>
@@ -329,7 +335,10 @@
             </div>
             <div class="mb-3">
                 <label for="loginFormPassword" class="form-label">Пароль</label>
-                <input type="password" name="password" id="loginFormPassword" class="form-control" placeholder="Введите свой пароль">
+                <div class="password-wrapp">
+                    <input type="password" name="password" id="loginFormPassword" class="form-control" placeholder="Введите свой пароль">
+                    <i class="icon icon-eye-slash passwordToggle"></i>
+                </div>
             </div>
             <div class="d-flex w-100  justify-content-between">
                 <div class="mb-3 form-check">
