--- a/crypto_project/customer/templates/profile.html
+++ b/crypto_project/customer/templates/profile.html
@@ -78,7 +78,7 @@
                         validate()
                     },
                     error: function(xhr, status, error) {
-                        debugger
+                        console.log(error)
                     }
                 });
             });
