--- a/crypto_project/customer/templates/_account.html
+++ b/crypto_project/customer/templates/_account.html
@@ -6,7 +6,111 @@
     </div>
     <div class="row">
         <div class="col">
-            asd
+        {% if user_form.non_field_errors %}
+            <ul class="errorlist">
+                {% for error in form.non_field_errors %}
+                    <li>{{ error }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
+        {% if customer_form.non_field_errors %}
+            <ul class="errorlist">
+                {% for error in form.non_field_errors %}
+                    <li>{{ error }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
+            <form id="account" method="post" autocomplete="off">
+                {% csrf_token %}
+                <div class="row">
+                    <div class="col-12 mb-3">
+                        <span class="type-title">1. Информация о клиенте</span>
+                    </div>
+                    <div class="col-12 mb-3">
+                        <label for="name" class="form-label">ФИО</label>
+                        {{ user_form.name }}
+                        {% for error in user_form.name.errors %}
+                            <div class="invalid-feedback">{{ error }}</div>
+                        {% endfor %}
+                    </div>
+                    <div class="col-12 col-xl-6 mb-3">
+                        <label for="email" class="form-label">Email</label>
+                        {{ user_form.email }}
+                        {% for error in user_form.email.errors %}
+                            <div class="invalid-feedback">{{ error }}</div>
+                        {% endfor %}
+                    </div>
+                    <div class="col-12 col-xl-6 mb-3">
+                        <label for="phone_number" class="form-label">Телефон</label>
+                        {{ customer_form.phone_number }}
+                        {% for error in customer_form.phone_number.errors %}
+                            <div class="invalid-feedback">{{ error }}</div>
+                        {% endfor %}
+                    </div>
+                    <div class="col-12 col-xl-6 mb-3 country_wrap">
+                        <label for="country" class="form-label">Страна</label>
+                        {{ customer_form.country }}
+                        {% for error in customer_form.country.errors %}
+                            <div class="invalid-feedback">{{ error }}</div>
+                        {% endfor %}
+                    </div>
+                    <div class="col-12 col-xl-6 mb-3">
+                        <label for="city" class="form-label">Город</label>
+                        {{ customer_form.city }}
+                        {% for error in customer_form.city.errors %}
+                            <div class="invalid-feedback">{{ error }}</div>
+                        {% endfor %}
+                    </div>
+                    <div class="col-12 col-xl-6 mb-3 country_wrap">
+                        <label for="country" class="form-label">Адрес</label>
+                        {{ customer_form.address }}
+                        {% for error in customer_form.address.errors %}
+                            <div class="invalid-feedback">{{ error }}</div>
+                        {% endfor %}
+                    </div>
+                    <div class="col-12 col-xl-6 mb-3">
+                        <label for="city" class="form-label">Индекс</label>
+                        {{ customer_form.zip_code }}
+                        {% for error in customer_form.zip_code.errors %}
+                            <div class="invalid-feedback">{{ error }}</div>
+                        {% endfor %}
+                    </div>
+                    <div class="col-12 mt-2 mb-3">
+                        <span class="line"></span>
+                    </div>
+                    <div class="col-12 mb-3">
+                        <span class="type-title">2. Личные данные</span>
+                    </div>
+                    <div class="col-12 mb-3">
+                        <label for="birth_date" class="form-label">Дата рождения</label>
+                        {{ customer_form.birth_date }}
+                        {% for error in customer_form.birth_date.errors %}
+                            <div class="invalid-feedback">{{ error }}</div>
+                        {% endfor %}
+                    </div>
+                    <div class="col-12 col-xl-6 mb-3">
+                        <label for="job_address" class="form-label">Место работы</label>
+                        {{ customer_form.job_address }}
+                        {% for error in customer_form.job_address.errors %}
+                            <div class="invalid-feedback">{{ error }}</div>
+                        {% endfor %}
+                    </div>
+                    <div class="col-12 col-xl-6 mb-3">
+                        <label for="job_type" class="form-label">Вид занятости</label>
+                        {{ customer_form.job_type }}
+                        {% for error in customer_form.job_type.errors %}
+                            <div class="invalid-feedback">{{ error }}</div>
+                        {% endfor %}
+                    </div>
+                    <div class="col-12 mt-2 mb-3">
+                        <span class="line"></span>
+                    </div>
+                    <div class="col-12 mb-3">
+                        <span class="type-title">3. Платежный инструмент</span>
+                    </div>
+                </div>
+                <button type="submit">Update Profile</button>
+            </form>
         </div>
     </div>
 </div>
