--- a/crypto_project/customer/templates/_account.html
+++ b/crypto_project/customer/templates/_account.html
@@ -109,7 +109,9 @@
                         <span class="type-title">3. Платежный инструмент</span>
                     </div>
                 </div>
-                <button type="submit">Update Profile</button>
+                <div class="d-flex justify-content-end">
+                    <button type="submit" class="btn btn-success">Отправить</button>
+                </div>
             </form>
         </div>
     </div>
